MUDANÇA COR DE FUNDO

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiro Site com GitHub</title>
 </head>
-<body>
+<body style="background-color: bisque;">
     <h1>Meu Primeiro Site com GitHub</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKJOplJyX2s4_KDt-1IBY-GQiBdGpHdbNq7A&s" alt="Pintura Rio de Janeiro">
 
